2008-01-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-ugly-plugins-docs.sgml:
	* docs/plugins/gst-plugins-ugly-plugins-sections.txt:
	  Add the real and rtsp elements and update the lists.

	* docs/plugins/inspect/plugin-amrnb.xml:
	* docs/plugins/inspect/plugin-asf.xml:
	* docs/plugins/inspect/plugin-dvdlpcmdec.xml:
	* docs/plugins/inspect/plugin-dvdsub.xml:
	* docs/plugins/inspect/plugin-mpegaudioparse.xml:
	* docs/plugins/inspect/plugin-mpegstream.xml:
	* docs/plugins/inspect/plugin-realmedia.xml:
	* docs/plugins/inspect/plugin-siddec.xml:
	* docs/plugins/inspect/plugin-synaesthesia.xml:
	  Regenerate docs.

	* gst/iec958/ac3_padder.c:
	* gst/iec958/ac3_padder.h:
	  Do not use gtk-doc style comments for non gtk-doc comments. Note -
	  there are functions defined using extern in the .c file - does that
	  make sense?

2008-01-21  Stefan Kost  <ensonic@users.sf.net>

	* ext/mad/gstmad.c:
	  Chain up at the end of the function.

2008-01-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/mad/gstid3tag.c: (gst_id3_tag_class_init):
	Don't add pad templates for the base class but only in the
	subclasses.

2008-01-17  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/lame/gstlame.c:
	* ext/lame/gstlame.h:
	Fix the case where you initially have stereo input, and so lame's
	mode is not set to mono, and then you get input with mono audio and
	soon after you get stereo input again. What happened before this
	commit is that it would keep the encoding mode as mono. It should
	change it back to the one requested by the app (or the default one)
	if not requested.

2008-01-15  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_handle_first_frame), (mp3parse_time_to_bytepos),
	(mp3parse_bytepos_to_time):
	Interpolate the VBRI seek table entries to get better results,
	support 3 byte seek table entries and prevent overflows in the