@@ -1,3 +1,11 @@
+2008-01-29  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* gst/mpegaudioparse/gstmpegaudioparse.c: (mp3_caps_create),
+	(gst_mp3parse_chain):
+	Don't set new caps on the srcpad everytime the bitrate or MPEG
+	version changes but calculate new spf value when the MPEG version
+	changes.
+
 2008-01-21  Stefan Kost  <ensonic@users.sf.net>
 
 	* docs/plugins/Makefile.am:
